# bird_classification

./: .gitignore  .pre-commit-config.yaml  KAGGLE_SETUP.md  MODELS.md  README.md  pyproject.toml
.dvc/: config
bird_classification/: dataset.py  infer.py  model.py  train.py  utils.py
bird_classification/models/: __init__.py  efficient_net.py  resnet_baseline.py
config/: config.yaml  main_model.yaml
config/data/: default.yaml
config/model/: efficientnet_b0.yaml  resnet50.yaml  resnet_baseline.yaml
config/optimizer/: adamw.yaml
config/scheduler/: cosine.yaml
config/trainer/: default.yaml
plots/: rm_plots.md
triton/: Dockerfile  docker-compose.yml  export_to_trt.md  test.ipynb
triton/model_repository/ensemble_trt/: config.pbtxt
triton/model_repository/image_preprocessor/: config.pbtxt  requirements.txt
triton/model_repository/image_preprocessor/1/: model.py
triton/model_repository/trt/: config.pbtxt
